set(ALTERATOR_DATADIR "share/alterator")
set(BACKENDS_DIR "${ALTERATOR_DATADIR}/backends")
set(APPLICATIONS_DIR "${ALTERATOR_DATADIR}/applications")

file(GLOB BACKENDS "${PROJECT_SOURCE_DIR}/alterator/*.backend")
file(GLOB APPLICATIONS "${PROJECT_SOURCE_DIR}/alterator/*.application")

install(FILES ${BACKENDS} DESTINATION ${BACKENDS_DIR})
install(FILES ${APPLICATIONS} DESTINATION ${APPLICATIONS_DIR})
