set(BASH_COMPLETIONS_DIR "/bash-completion/completions")
set(FISH_COMPLETIONS_DIR "/fish/vendor_completions.d")

set(EXEC_NAMES "alteratorctl" "actl")

set(BASH_COMPLETION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/completion)
set(FISH_COMPLETION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/completion.fish)

foreach(EXEC_NAME IN ITEMS ${EXEC_NAMES})
    install(FILES ${BASH_COMPLETION_FILE}
            DESTINATION "${CMAKE_INSTALL_FULL_DATAROOTDIR}${BASH_COMPLETIONS_DIR}"
            RENAME ${EXEC_NAME}
            PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)

    install(FILES ${FISH_COMPLETION_FILE}
            DESTINATION "${CMAKE_INSTALL_FULL_DATAROOTDIR}${FISH_COMPLETIONS_DIR}"
            RENAME ${EXEC_NAME}.fish
            PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
endforeach()
