set(BASH_COMPLETIONS_DIR "/bash-completion/completions")
set(FISH_COMPLETIONS_DIR "/fish/vendor_completions.d")
set(COMPLETION_SCRIPTS_DIR "/alteratorctl/scripts")

set(EXEC_NAMES "alteratorctl" "actl")

set(BASH_WRAPPER_NAME "completion_wrapper")

set(BASH_COMPLETION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/completion)
set(FISH_COMPLETION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/completion.fish)
set(BASH_COMPLETION_WRAPPER ${CMAKE_CURRENT_SOURCE_DIR}/completion_wrapper)

foreach(EXEC_NAME IN ITEMS ${EXEC_NAMES})
    install(FILES ${BASH_COMPLETION_FILE}
            DESTINATION "${CMAKE_INSTALL_FULL_DATAROOTDIR}${BASH_COMPLETIONS_DIR}"
            RENAME ${EXEC_NAME}
            PERMISSIONS OWNER_READ GROUP_READ WORLD_READ WORLD_EXECUTE)

    install(FILES ${FISH_COMPLETION_FILE}
            DESTINATION "${CMAKE_INSTALL_FULL_DATAROOTDIR}${FISH_COMPLETIONS_DIR}"
            RENAME ${EXEC_NAME}.fish
            PERMISSIONS OWNER_READ GROUP_READ WORLD_READ WORLD_EXECUTE)
endforeach()

install(FILES ${BASH_COMPLETION_WRAPPER}
        DESTINATION "${CMAKE_INSTALL_FULL_DATAROOTDIR}${COMPLETION_SCRIPTS_DIR}"
        RENAME ${BASH_WRAPPER_NAME}
        PERMISSIONS OWNER_READ GROUP_READ WORLD_READ WORLD_EXECUTE)
